Fixing review comments, round 2